@@ -1,0 +1,11 @@
+TOP = ../..
+
+include $(TOP)/mk/config.mk
+
+MAIN = GConfDemo.hs
+
+APPNAME = gconfDemo
+
+NEEDPACKAGES = gconf
+
+include $(TOP)/mk/common.mk
